fix the alignment of resources

--- a/ckanext/odn_demo_theme/public/css/odn_demo_theme.css
+++ b/ckanext/odn_demo_theme/public/css/odn_demo_theme.css
@@ -121,7 +121,6 @@ h3.dataset-heading { line-height: inherit; }
 .group-list .dataset-content  { min-height: 0; }
 .group-list .dataset-content { float: left; }
 .dataset-resources { margin-top: 0; }
-.label[data-format="zip"], .label[data-format*="zip"] { margin-right:10px; }
 h3.dataset-heading, h3.media-heading { font-size: 14px; }
 
 .module-image { height: auto; line-height:inherit; margin-right:0; }
